js fix for aligned project loading

--- a/css/scroll.css
+++ b/css/scroll.css
@@ -470,10 +470,6 @@ canvas {
   cursor: pointer;
 }
 
-/*.scroll-container > div[id] {
-  scroll-margin-top: 100vh;
-}*/
-
 /*--------------------------------------------------*/
 
 @media only screen and (max-width: 1350px) {
